fixed filter card going off screen when showing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -226,7 +226,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  transform: translateX(-56vw);
+  transform: translateX(-30vw);
   background-color: white;
 }
 
